<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="WorkoutAViewModel"
            type="com.example.myworkouttracker.form.WorkoutAViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".tracker.TrackerFragment">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="72dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> WorkoutAViewModel.onStartTracking()}"
            app:backgroundTint="#FFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_input_add"
            app:tint="@color/colorPrimary" />

        <TextView
            android:id="@+id/workout_A_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="53dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="293dp"
            android:text="@string/workout_a"
            android:textSize="38sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextSquatNum"
            android:layout_width="165dp"
            android:layout_height="42dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="40dp"
            android:autofillHints="Squat 1RM"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textViewSquat"
            app:layout_constraintTop_toBottomOf="@+id/workout_A_title" />

        <TextView
            android:id="@+id/textViewSquat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="28dp"
            android:labelFor="@id/editTextSquatNum"
            android:text="@string/squat_1rm"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workout_A_title" />

        <TextView
            android:id="@+id/textViewBench"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="100dp"
            android:labelFor="@id/editTextBenchNum"
            android:text="@string/bench_1rm"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workout_A_title" />

        <EditText
            android:id="@+id/editTextBenchNum"
            android:layout_width="165dp"
            android:layout_height="42dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="40dp"
            android:autofillHints="Bench 1RM"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textViewBench"
            app:layout_constraintTop_toBottomOf="@+id/workout_A_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>